# DevOps-CLI

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  ROADMAP.md  ai_context.md  pyproject.toml  pyrightconfig.json
devai/: __init__.py
devai/agent/: __init__.py  agent_manager.py  deployment_agent.py  security_agent.py
devai/agents/: monitoring_agent.py
devai/ai/: __init__.py  error_analyzer.py  planner.py
devai/ai_providers/: anthropic_provider.py  base.py  llama_provider.py  mock_provider.py  openai_provider.py
devai/audit/: __init__.py  audit_logger.py
devai/auth/: auth_manager.py
devai/automation/: __init__.py  scheduler.py
devai/autoscaling/: scale_controller.py
devai/cicd/: pipeline_generator.py
devai/cli/: main.py
devai/cluster/: __init__.py  cluster_manager.py
devai/config/: config_loader.py
devai/connectors/: __init__.py  base.py  cloud_connector.py  cluster_manager.py  docker.py  ssh.py  vps_connector.py
devai/core/: __init__.py  config.py  exceptions.py  models.py  provisioner.py  server_manager.py
devai/database/: db_manager.py
devai/deployment/: __init__.py
devai/environment/: __init__.py
devai/execution/: __init__.py  approvals.py  docker_manager.py  engine.py  registry.py  ssh_executor.py
devai/git/: __init__.py
md files/: architecture_blueprint_v2.md  architecture_layers.md  execution_layer.md  implementation_plan.md  implementation_plan_v4.md  implementation_plan_v5.md  implementation_plan_v6.md  memory_system_proposal.md  phase2_design.md  phase5_design.md  task.md
tests/: test_safety_pipeline.py
(+60 files in other folders)
