[project]
name = "devai"
version = "0.1.0"
description = "AI-powered DevOps CLI platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.4.0",
    "click>=8.1.7",
    "rich>=13.6.0",
    "openai>=1.1.0",
    "anthropic>=0.5.0",
    "fastapi",
    "uvicorn",
    "sqlmodel>=0.0.14",
    "pyyaml>=6.0.1",
    "prompt-toolkit>=3.0.43",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
devai = "devai.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devai"]
